[package]
name = "evengy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
serenity = { git = "https://github.com/nshout/serenity", branch = "current" }
#serenity = "0.11"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
sysinfo = "0.20.3"
whoami = "*"
uptime_lib = "0.2.2"
num_cpus = "1.16.0"
rand = "0.8.4"