[package]
name = "evengy"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.5.7"
serenity = { git = "https://github.com/nshout/serenity", branch = "current" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
sysinfo = "0.29.10"
whoami = "*"
uptime_lib = "0.2.2"
num_cpus = "1.16.0"
rand = "0.8.4"